@@ -485,9 +485,6 @@ WebInspector.ConsoleView.prototype = {
         var shortcutL = shortcut.makeDescriptor("l", WebInspector.KeyboardShortcut.Modifiers.Ctrl);
         this._shortcuts[shortcutL.key] = this._requestClearMessages.bind(this);
 
-        var shortcutM = shortcut.makeDescriptor("m", WebInspector.KeyboardShortcut.Modifiers.CtrlOrMeta | WebInspector.KeyboardShortcut.Modifiers.Shift);
-        this._shortcuts[shortcutM.key] = this._dumpMemory.bind(this);
-
         var section = WebInspector.shortcutsScreen.section(WebInspector.UIString("Console"));
         var keys = WebInspector.isMac() ? [ shortcutK.name, shortcutL.name ] : [ shortcutL.name ];
         section.addAlternateKeys(keys, WebInspector.UIString("Clear console"));
@@ -590,44 +587,6 @@ WebInspector.ConsoleView.prototype = {
     elementsToRestoreScrollPositionsFor: function()
     {
         return [this.messagesElement];
-    },
-
-    _dumpMemory: function()
-    {
-        function comparator(a, b)
-        {
-            if (a.size < b.size)
-                return 1;
-            if (a.size > b.size)
-                return -1;
-            return a.title.localeCompare(b.title);
-        }
-
-        function callback(error, groups)
-        {
-            var titles = [];
-            groups.sort(comparator);
-            for (var i = 0; i < groups.length; ++i) {
-                var suffix = groups[i].size > 0 ? " [" + groups[i].size + "]" : "";
-                titles.push(groups[i].title + suffix + (groups[i].documentURI ? " (" + groups[i].documentURI + ")" : ""));
-            }
-
-            var counter = 1;
-            var previousTitle = null;
-            for (var i = 0; i < titles.length; ++i) {
-                 var title = titles[i];
-                 if (title === previousTitle) {
-                     counter++;
-                     continue;
-                 }
-                 if (previousTitle)
-                     WebInspector.log(counter > 1 ? counter + " x " + previousTitle : previousTitle);
-                 previousTitle = title;
-                 counter = 1;
-            }
-            WebInspector.log(counter > 1 ? counter + " x " + previousTitle : previousTitle);
-        }
-        MemoryAgent.getDOMNodeCount(callback);
     },
 
     __proto__: WebInspector.View.prototype
